# cpp-opencv-util

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CollageSpec.h  FloatHist.cpp  FloatHist.h  ImageUtil.cpp  ImageUtil.h
tests/: CMakeLists.txt  ImageUtilTests.cpp
